@@ -31,6 +31,7 @@
 	  <th>Colour</th>
 	  <th>Profile</th>
 	  <th>Business Value</th>
+          <th></th>
 	</tr>
       </table>
       <button onclick="redrawPriorityChart(
@@ -66,7 +67,7 @@
       Business Value:&nbsp;
       <input type="text" class="bv" value="1" maxlength="4" size="6">
       <button onclick="addProfilePriorityRow(
-		       '#prty_table','#new_profile')">
+		       chart,'#prty_table','#new_profile')">
 	Add</button>
     </section>
     <footer>
